# vst-rust-wasm

./: .gitignore  Cargo.toml  PLAN.md  README.md  blog-post.md
dsp-core/: Cargo.toml
dsp-core/src/: envelope.rs  lib.rs  oscillator.rs  params.rs
plugin/: Cargo.toml
plugin/src/: editor.rs  keyboard.rs  lib.rs  main.rs  visualizer.rs
synth-ui/: Cargo.toml
synth-ui/src/: keyboard.rs  layout.rs  lib.rs  visualizer.rs
web/: Cargo.toml  Trunk.toml  index.html
web-worklet/: Cargo.toml
web-worklet/src/: lib.rs
web-worklet/static/: worklet-processor.js
web/src/: app.rs  audio_bridge.rs  lib.rs  web_controls.rs
