[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "simple-synth-standalone"
path = "src/main.rs"

[dependencies]
dsp-core = { path = "../dsp-core" }
synth-ui = { path = "../synth-ui" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
atomic_float = "1"
cpal = { version = "0.15", features = ["asio"] }
